--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <td>R$ 70,00</td>
             <td>Em estoque</td>
         <tr>
-            <td>Calça Jeans</td>
+            <td>Bermuda</td>
             <td>Azul</td>
             <td>P</td>
             <td>R$ 160,00</td>
