--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <th>Disponibilidade</th>
         </tr>
             <td>Camiseta</td>
-            <td>Preta</td>
+            <td>Vermelha</td>
             <td>M</td>
             <td>R$ 70,00</td>
             <td>Em estoque</td>
